# torch2mlx

./: .gitignore  CLAUDE.md  README.md  next-steps.md  pyproject.toml
docs/: support-matrix.md
examples/: validate_mnist.py  validate_resnet.py  validate_transformer.py
src/torch2mlx/: __init__.py  __main__.py  analyzer.py  codegen.py  converter.py  op_mapping.py  registry.py  state_dict.py  weight_converter.py
src/torch2mlx/templates/: __init__.py  cnn.py  mlp.py  pooling.py  transformer.py
tests/: test_analyzer.py  test_codegen.py  test_compile_interop.py  test_converter.py  test_dtype_mapping.py  test_e2e_models.py  test_hf_codegen.py  test_hf_coverage.py  test_placeholder.py  test_registry.py  test_templates.py  test_weights.py
