[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torch2mlx"
version = "0.1.0"
description = "Translate PyTorch neural network models to Apple's MLX framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ryan Young", email = "git@ryanyoung.io"},
]
keywords = ["pytorch", "mlx", "apple-silicon", "model-conversion", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "safetensors",
]

[project.urls]
Homepage = "https://github.com/SynapticSage/torch2mlx"
Repository = "https://github.com/SynapticSage/torch2mlx"
Issues = "https://github.com/SynapticSage/torch2mlx/issues"

[project.optional-dependencies]
mlx = ["mlx>=0.18.0"]
torch = ["torch>=2.0.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
all = ["torch2mlx[mlx,torch,dev]"]

[project.scripts]
torch2mlx = "torch2mlx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/torch2mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100
